Add images and elements.
Added title, title image, choice subtitle, and choice images.
Added round choices and result placeholders.
Added zero score for score table.

First commit upon returning from hiatus. Let's get back on track!

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: aqua;
 }
-#choices, #stats, #marquee{
+#choices, #stats, #marquee, #battle{
     display: block;
     border: 1px solid black;
     text-align: center;
