--- a/css/style3.css
+++ b/css/style3.css
@@ -67,7 +67,7 @@ h2 {
     text-align: center;
 }
 
-p{
+p, td{
     font-family: "Rye", sans-serif;
 }
 
@@ -123,6 +123,7 @@ img{
     grid-area: choices;
     background-color: burlywood;
     text-align: center;
+    height: 65px;
 }
 
 #round-result{
@@ -136,16 +137,38 @@ img{
     text-align: center;
 }
 
-#stats{ /*lvl 1 right*/
-    display: grid;
+/*#stats{ lvl 1 right*/
+  #player, #computer, #playerScore, #compScore{
+    display: inline-grid;
+    width: 150px;
     grid-area: stats;
     position: relative;
     text-align: center;
+    height: 100px;
+    margin: auto 5px;
+    background-color: burlywood;
+    color: saddlebrown;
+    border: 1px solid saddlebrown;
     /* grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 
         "player computer"
         "playerScore compScore"; */
+}
+
+#player, #computer{
+  height: 25px;
+/*  padding: 10px;*/
+}
+
+#playerScore, #compScore{
+  height: 50px;
+  padding-top: 15px;
+}
+
+#stats{
+  margin: auto;
+  padding: 5px;
 }
 
 #winner {
