Grouping repos without histories

--- a/rock-paper-scissors/css/style3.css
+++ b/rock-paper-scissors/css/style3.css
@@ -7,7 +7,7 @@ body{
     ". . main . ."
     ". . footer . .";
     background-color: antiquewhite;
-    background-image: url(../images/wanted-poster.jpeg);
+    background-image: url(../images/parchment.png);
     background-size: cover;
 }
 
